--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <div class="header">Header</div>
     <div class="wrapper">
-      <div class="contact">Main</div>
-      <div class="blog">Aside</div>
+      <div class="main">Main</div>
+      <div class="aside">Aside</div>
     </div>
     <div class="footer">Footer</div>
   </body>
